--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/three": "^0.84.27",
+    "angular-split": "^0.2.2",
     "core-js": "^2.4.1",
+    "ng2-ace-editor": "^0.3.1",
     "rxjs": "^5.4.2",
+    "typescript-compiler": "^1.4.1-2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
