--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.4.1",
     "ng2-ace-editor": "^0.3.1",
     "rxjs": "^5.4.2",
+    "three": "^0.87.1",
     "typescript-compiler": "^1.4.1-2",
     "zone.js": "^0.8.14"
   },
@@ -36,6 +37,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/three": "^0.84.28",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
