--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,16 @@
-language: typescript
+language: node_js
+node_js:
+  - "6.11.2"
+branches: 
+  only: 
+    - master
+before_script:
+  - npm install -g @angular/cli
+script:
+  - ng test
+after_success: 
+  - ng build --prod
+notifications:
+  email:
+    on_failure: change
+    on_success: change
