--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,33 @@ notifications:
   email:
     on_failure: change
     on_success: change
+
+
+sudo: required
+dist: trusty
+language: node_js
+node_js:
+  - '6.11.2'
+branches: 
+  only: 
+    - master
+addons:
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
+
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
+before_script:
+- npm install -g angular-cli
+- npm install -g karma
+- npm install
+- ng build
+
+script: karma start config/karma.conf.js --single-run
