--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ before_script:
 - npm install
 - ng build
 
-script: karma start config/karma.conf.js --single-run
+script: karma start karma.conf.js --single-run
