--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^4.2.4",
     "@types/three": "^0.84.27",
     "angular-split": "^0.2.2",
+    "angular-tree-component": "^5.1.2",
     "core-js": "^2.4.1",
     "ng2-ace-editor": "^0.3.1",
     "rxjs": "^5.4.2",
