--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
@@ -25,6 +27,7 @@
     "angular-split": "^0.2.2",
     "angular-tree-component": "^5.1.2",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "ng2-ace-editor": "^0.3.1",
     "rxjs": "^5.4.2",
     "three": "^0.87.1",
