--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/three": "^0.84.27",
+    "angular-resizable-element": "^1.2.4",
     "angular-split": "^0.2.2",
     "angular-tree-component": "^5.1.2",
+    "angular4-drag-drop": "^1.1.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-ace-editor": "^0.3.1",
