--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^4.2.4",
     "@types/three": "^0.84.27",
     "angular-resizable-element": "^1.2.4",
-    "angular-split": "^0.2.2",
+    "angular-split": "^0.2.7",
     "angular-tree-component": "^5.1.2",
     "angular4-drag-drop": "^1.1.2",
     "core-js": "^2.4.1",
@@ -37,7 +37,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.1",
+    "@angular/cli": "^1.5.4",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
@@ -57,6 +57,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "^2.4.0"
   }
 }
