--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-split": "^0.2.7",
     "angular-tree-component": "^5.1.2",
     "angular4-drag-drop": "^1.1.2",
+    "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng2-ace-editor": "^0.3.1",
