--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.1",
     "rxjs": "^5.4.2",
     "three": "^0.87.1",
