--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.2.4",
+    "@angular/common": "^4.4.6",
     "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
+    "@angular/core": "^4.4.6",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/material": "^2.0.0-beta.12",
@@ -25,14 +25,14 @@
     "@angular/router": "^4.2.4",
     "@types/three": "^0.84.27",
     "angular-resizable-element": "^1.2.4",
-    "angular-split": "^0.2.7",
+    "angular-split": "0.2.2",
     "angular-tree-component": "^5.1.2",
     "angular4-drag-drop": "^1.1.2",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
-    "ng2-ace-editor": "^0.3.1",
+    "ng2-ace-editor": "0.3.1",
     "rxjs": "^5.4.2",
     "three": "^0.87.1",
     "typescript-compiler": "^1.4.1-2",
