--- a/package.json
+++ b/package.json
@@ -12,53 +12,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0-rc.2",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0-rc.2",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
     "@types/three": "^0.84.27",
     "angular-resizable-element": "^1.2.4",
-    "angular-split": "0.2.2",
-    "angular-tree-component": "^5.1.2",
+    "angular-split": "^1.0.0-rc.0",
+    "angular-tree-component": "^6.0.0",
     "angular4-drag-drop": "^1.1.2",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
-    "ng2-ace-editor": "0.3.1",
-    "rxjs": "^5.4.2",
-    "three": "^0.87.1",
-    "typescript-compiler": "^1.4.1-2",
+    "ng2-ace-editor": "^0.3.4",
+    "rxjs": "^5.5.2",
+    "three": "^0.88.0",
+    "typescript-compiler": "^1.4.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "^1.5.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^8.0.54",
     "@types/three": "^0.84.28",
-    "codelyzer": "~3.1.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.5.3",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "^2.4.0"
+    "protractor": "^5.2.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "2.4.2"
   }
 }
