gs-module integrated

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "angular4-drag-drop": "^1.1.2",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
-    "gs-json": "git+https://git@github.com/phtj/gs-json.git",
+    "gs-json": "git://github.com/phtj/gs-json.git",
+    "gs-modelling": "git://github.com/phtj/gs-modelling.git",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.4",
