--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
     "gs-json": "git://github.com/phtj/gs-json.git",
-    "gs-modelling": "git://github.com/phtj/gs-modelling.git",
+    "gs-modelling": "^0.1.1",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.4",
