--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "angular4-drag-drop": "^1.1.2",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
-    "gs-json": "gs-json",
+    "gs-json": "*",
     "gs-modelling": "^0.1.1",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
