--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/cdk": "^5.0.0-rc.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
+    "@angular/core": "^5.1.2",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.0-rc.2",
@@ -42,7 +42,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.5.4",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular/compiler-cli": "^5.1.2",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "~2.0.2",
@@ -61,6 +61,6 @@
     "protractor": "^5.2.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "2.4.2"
+    "typescript": "^2.4.2"
   }
 }
