--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "angular4-drag-drop": "^1.1.2",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
-    "gs-json": "^0.1.5",
-    "gs-modelling": "^0.1.6",
+    "gs-json": "^0.1.8",
+    "gs-modelling": "^0.1.7",
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.4",
     "rxjs": "^5.5.2",
     "three": "^0.88.0",
-    "three-orbitcontrols-ts": "^0.1.2",
+    "three-orbit-controls": "^82.1.0",
     "typescript-compiler": "^1.4.1",
     "zone.js": "^0.8.14"
   },
