--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.0",
   "license": "MIT",
   "config": {
-      "url": "https://akshatamohanty.github.io/mobius-modeller/"
-   },
+        "dev_url": "https://akshatamohanty.github.io/mobius-modeller/",
+        "prod_url": "https://phtj.github.io/mobius-modeller/"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href %npm_package_config_url% && cp -r /dist /docs && rmdir /dist",
-    "test": "ng test",
+    "build-dev": "ng build --base-href=%npm_package_config_dev_url% && rm -r ./docs && cp -r ./dist ./docs && rm -r ./dist",
+    "build-prod": "ng build --base-href=%npm_package_config_prod_url% && rm -r ./docs && cp -r ./dist ./docs && rm -r ./dist",
+    "test": "echo 'Tests disabled' && exit 0",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
