--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "ng build",
     "build-dev": "ng build --base-href=%npm_package_config_dev_url% && rm -r ./docs && cp -r ./dist ./docs && rm -r ./dist",
     "build-prod": "ng build --base-href=%npm_package_config_prod_url% && rm -r ./docs && cp -r ./dist ./docs && rm -r ./dist",
-    "test": "echo 'Tests disabled' && exit 0",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -41,6 +41,7 @@
     "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.4",
+    "ngx-pagination": "^3.0.3",
     "rxjs": "^5.5.2",
     "three": "^0.88.0",
     "three-orbit-controls": "^82.1.0",
