--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "angular-tree-component": "^6.0.0",
     "circular-json": "^0.4.0",
     "core-js": "^2.4.1",
-    "gs-json": "^0.1.54",
-    "gs-modelling": "^0.1.53"
-,    "hammerjs": "^2.0.8",
+    "gs-json": "^0.1.57",
+    "gs-modelling": "^0.1.55",
+    "hammerjs": "^2.0.8",
     "js-beautify": "^1.7.4",
     "ng2-ace-editor": "^0.3.4",
     "ngx-pagination": "^3.0.3",
